--- a/index.html
+++ b/index.html
@@ -1,12 +1,47 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <title>Play Free Word Puzzle Game Online | Daily Wordle Challenge</title>
+    <meta
+      name="description"
+      content="Play our free daily word puzzle game online. Guess the hidden word in limited tries, boost your vocabulary, and challenge friends worldwide. Works on mobile & desktop!"
+    />
+    <meta
+      name="keywords"
+      content="word puzzle game, daily word game, free wordle alternative, online vocabulary game, guess the word game, browser puzzle game, multiplayer word challenge, free brain training game, daily puzzle online"
+    />
+
+    <!-- Open Graph -->
+    <meta
+      property="og:title"
+      content="Daily Word Puzzle Game - Play Free Online"
+    />
+    <meta
+      property="og:description"
+      content="A fun daily word puzzle game to test your skills. Play anywhere, no download needed, and share your score!"
+    />
+    <meta property="og:image" content="https://www.pexels.com/photo/scrabble-lot-278890/" />
+    <meta property="og:url" content="https://wordle121.onrender.com/" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Play Daily Word Puzzle Game Online" />
+    <meta
+      name="twitter:description"
+      content="Guess the hidden word, improve your vocabulary, and challenge friends. Play for free on all devices!"
+    />
+    <meta name="twitter:image" content="https://www.pexels.com/photo/scrabble-lot-278890/" />
+
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
- 
-     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4121958416488188"
-     crossorigin="anonymous"></script>
+
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4121958416488188"
+      crossorigin="anonymous"
+    ></script>
     <title>Wordle</title>
   </head>
   <body>
