--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       content="Guess the hidden word, improve your vocabulary, and challenge friends. Play for free on all devices!"
     />
     <meta name="twitter:image" content="https://www.pexels.com/photo/scrabble-lot-278890/" />
+    <meta name="google-site-verification" content="SHHMmefw0lKfRUWaT2JqqgdQnKB5sn3AClVcYmWAHXQ" />
 
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
