--- a/index.html
+++ b/index.html
@@ -13,14 +13,8 @@
     />
 
     <!-- Open Graph -->
-    <meta
-      property="og:title"
-      content="Daily Word Puzzle Game - Play Free Online"
-    />
-    <meta
-      property="og:description"
-      content="A fun daily word puzzle game to test your skills. Play anywhere, no download needed, and share your score!"
-    />
+    <meta property="og:title" content="Daily Word Puzzle Game - Play Free Online" />
+    <meta property="og:description" content="A fun daily word puzzle game to test your skills. Play anywhere, no download needed, and share your score!" />
     <meta property="og:image" content="https://www.pexels.com/photo/scrabble-lot-278890/" />
     <meta property="og:url" content="https://wordle121.onrender.com/" />
     <meta property="og:type" content="website" />
@@ -28,22 +22,14 @@
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Play Daily Word Puzzle Game Online" />
-    <meta
-      name="twitter:description"
-      content="Guess the hidden word, improve your vocabulary, and challenge friends. Play for free on all devices!"
-    />
+    <meta name="twitter:description" content="Guess the hidden word, improve your vocabulary, and challenge friends. Play for free on all devices!" />
     <meta name="twitter:image" content="https://www.pexels.com/photo/scrabble-lot-278890/" />
-    <meta name="google-site-verification" content="SHHMmefw0lKfRUWaT2JqqgdQnKB5sn3AClVcYmWAHXQ" />
 
+    <meta name="google-site-verification" content="SHHMmefw0lKfRUWaT2JqqgdQnKB5sn3AClVcYmWAHXQ" />
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <script
-      async
-      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4121958416488188"
-      crossorigin="anonymous"
-    ></script>
-    <title>Wordle</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4121958416488188" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="root"></div>
